Added genectic algorithm based on slides, using uniform crossover and tournament selection

--- a/activity_2.ipynb
+++ b/activity_2.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "1d5eb8de-2410-44d9-94ea-9e0fbabbd069",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import networkx as nx\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "cd4c528f-e0ad-4bda-89ff-7d49d827dcf4",
    "metadata": {},
@@ -37,10 +50,6 @@
     }
    ],
    "source": [
-    "import networkx as nx\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def read_col_file(file_path):\n",
     "    \"\"\"\n",
     "    Parses a DIMACS .col file and returns a NetworkX graph.\n",
@@ -154,6 +163,266 @@
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f166dcda-1e63-4c18-b5c1-1ea7ad679b9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DIMACS .col file reader\n",
+    "def read_col_file(filename):\n",
+    "    edges = []\n",
+    "    num_vertices = 0\n",
+    "\n",
+    "    with open(filename, 'r') as f:\n",
+    "        for line in f:\n",
+    "            line = line.strip()\n",
+    "            if not line or line.startswith('c'):\n",
+    "                continue\n",
+    "            if line.startswith('p'):\n",
+    "                parts = line.split()\n",
+    "                num_vertices = int(parts[2])\n",
+    "            elif line.startswith('e'):\n",
+    "                _, u, v = line.split()\n",
+    "                # Convert to 0-based indexing\n",
+    "                edges.append((int(u) - 1, int(v) - 1))\n",
+    "\n",
+    "    return num_vertices, edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "6e124c35-0f02-46a0-8c6b-df3d203e95c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "POPULATION_SIZE = 1000\n",
+    "GENERATIONS = 100000\n",
+    "MUTATION_RATE = 0.06\n",
+    "ELITISM_SIZE = 5\n",
+    "TOURNAMENT_SIZE = 5\n",
+    "\n",
+    "# Load graph\n",
+    "\n",
+    "FILENAME = \"myciel5.col\"  # <-- your .col file\n",
+    "NUM_VERTICES, edges = read_col_file(FILENAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "3f6b23fe-c794-4984-a052-1c5e9830566f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_population(num_colors):\n",
+    "    return [\n",
+    "        [random.randint(0, num_colors - 1) for _ in range(NUM_VERTICES)]\n",
+    "        for _ in range(POPULATION_SIZE)\n",
+    "    ]\n",
+    "\n",
+    "def count_conflicts(individual):\n",
+    "    return sum(1 for u, v in edges if individual[u] == individual[v])\n",
+    "\n",
+    "def fitness(individual):\n",
+    "    return 1 / (1 + count_conflicts(individual))\n",
+    "\n",
+    "def tournament_selection(population):\n",
+    "    return max(\n",
+    "        random.sample(population, TOURNAMENT_SIZE),\n",
+    "        key=fitness\n",
+    "    )\n",
+    "\n",
+    "def crossover(p1, p2):\n",
+    "    c1, c2 = [], []\n",
+    "    for g1, g2 in zip(p1, p2):\n",
+    "        if random.random() < 0.5:\n",
+    "            c1.append(g1)\n",
+    "            c2.append(g2)\n",
+    "        else:\n",
+    "            c1.append(g2)\n",
+    "            c2.append(g1)\n",
+    "    return c1, c2\n",
+    "\n",
+    "def mutation(individual):\n",
+    "    for i in range(NUM_VERTICES):\n",
+    "        if random.random() < MUTATION_RATE:\n",
+    "            individual[i] = random.randint(0, NUM_COLORS - 1)\n",
+    "    return individual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ce885097-70ae-4839-85e5-717bfee4b944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Genetic Algorithm\n",
+    "# You must choose k (upper bound)\n",
+    "NUM_COLORS = 6\n",
+    "\n",
+    "def genetic_algorithm():\n",
+    "\n",
+    "    print(f'K = {NUM_COLORS}')\n",
+    "    population = initialize_population(NUM_COLORS)\n",
+    "\n",
+    "    for generation in range(GENERATIONS):\n",
+    "        new_population = []\n",
+    "\n",
+    "        for _ in range(POPULATION_SIZE // 2):\n",
+    "            p1 = tournament_selection(population)\n",
+    "            p2 = tournament_selection(population)\n",
+    "\n",
+    "            c1, c2 = crossover(p1, p2)\n",
+    "            c1 = mutation(c1)\n",
+    "            c2 = mutation(c2)\n",
+    "\n",
+    "            new_population.extend([c1, c2])\n",
+    "\n",
+    "        # Elitism\n",
+    "        population.sort(key=fitness, reverse=True)\n",
+    "        elites = population[:ELITISM_SIZE]\n",
+    "        new_population[:ELITISM_SIZE] = elites\n",
+    "\n",
+    "        population = new_population\n",
+    "\n",
+    "        best = max(population, key=fitness)\n",
+    "        conflicts = count_conflicts(best)\n",
+    "\n",
+    "        if conflicts == 0:\n",
+    "            print(f\"Valid coloring found at generation {generation}\")\n",
+    "            print(f\"Gen {generation}: best conflicts = {conflicts}\")\n",
+    "            return best\n",
+    "\n",
+    "        if generation % 50 == 0:\n",
+    "            print(f\"Gen {generation}: best conflicts = {conflicts}\")\n",
+    "\n",
+    "        #return max(population, key=fitness)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "47435eb5-4ba0-43a0-a506-7a5a191f28ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K = 6\n",
+      "Gen 0: best conflicts = 21\n",
+      "Valid coloring found at generation 31\n",
+      "Gen 31: best conflicts = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "solution = genetic_algorithm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "1f2fbd69-29ec-4a23-b7e3-bd71d8e26129",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 3,\n",
+       " 5,\n",
+       " 0,\n",
+       " 3,\n",
+       " 1,\n",
+       " 5,\n",
+       " 5,\n",
+       " 4,\n",
+       " 0,\n",
+       " 0,\n",
+       " 4,\n",
+       " 3,\n",
+       " 1,\n",
+       " 0,\n",
+       " 4,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 5,\n",
+       " 2,\n",
+       " 1,\n",
+       " 2,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 2,\n",
+       " 3,\n",
+       " 2,\n",
+       " 3,\n",
+       " 1,\n",
+       " 4,\n",
+       " 2,\n",
+       " 1,\n",
+       " 4,\n",
+       " 4,\n",
+       " 2,\n",
+       " 2,\n",
+       " 5,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "e05713f9-f35f-48ef-b36a-10e7ef86d8fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best coloring found:\n",
+      "[4, 4, 1, 0, 4, 2, 5, 4, 2, 3, 1, 3, 0, 1, 2, 3, 3, 2, 0, 1, 2, 1, 4, 5, 3, 5, 0, 5, 4, 2, 5, 3, 5, 1, 3, 4, 5, 0, 5, 5, 2, 1, 5, 5, 1, 4, 0]\n",
+      "Conflicts: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Best coloring found:\")\n",
+    "print(solution)\n",
+    "print(\"Conflicts:\", count_conflicts(solution))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02cc2959-1399-45d3-bbec-e4323ce5c6dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
